# Fruit-Sorting-Robot

./: .gitignore
src/fruit_arm/: CMakeLists.txt  package.xml
src/fruit_arm/config/: controller_robot.yaml
src/fruit_arm/launch/: fruitsim.launch.py  robotsim.launch.py
src/fruit_arm/meshes/environment/: Apple_Crate.stl  Banana.stl  Banana_Crate.stl  Orange.stl  Orange_Crate.stl
src/fruit_arm/meshes/gripper/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  palm.stl
src/fruit_arm/meshes/robot/: BICEP.stl  END-EFFECTOR.stl  FOREARM.stl  YAW.stl
src/fruit_arm/src/: check_gpu.py  dataset_combiner.py  dataset_verify.py  home_pos.cpp  inference_script.py  new_vision.cpp  new_vision.py  renaming_model.py  requirement_check.py  training_script.py  vision.cpp
src/fruit_arm/urdf/: environment.urdf.xacro  qarm_gripper.urdf.xacro  qarm_robot.urdf.xacro  robot_gripper.urdf.xacro
src/fruit_arm/world/: empty.world
src/fruits_dataset/: SSD Training Data
src/moveit_pkg/: .setup_assistant  package.xml
src/moveit_pkg/config/: QARM_with_Gripper.ros2_control.xacro  QARM_with_Gripper.srdf  QARM_with_Gripper.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/moveit_pkg/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
